kubernetes/apps/default/paperless-ngx/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: paperless-ngx-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: paperless-ngx
    egress:
      - toFQDNs:
          - matchName: raw.githubusercontent.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-ngx-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
  egress:
    - toEndpoints:
        - matchLabels:
            app: paperless-ngx-dragonfly
      toPorts:
        - ports:
            - port: "6379"
